<resources>
    <string name="app_name">Test_app</string>
    <string name="login">Login</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="food_basket">Food Basket</string>
    <string name="register">register</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="manage">Manage</string>
    <string name="welcome">WELCOME</string>
    <string name="settings">Settings</string>
    <string name="profile_picture_of_the_user">profile picture of the user</string>
    <string name="notification">notification</string>
    <string name="avatar">Avatar</string>
    <string name="avatarProfile">Avatar</string>
    <string name="add">Add</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="type_of_food">Type of Food</string>
    <string name="quantity">Quantity</string>
    <string name="nutritional_info">Nutritional Info</string>
    <string name="expiry_date">Expiry date</string>
</resources>